Open link service meta tag changes

--- a/open.html
+++ b/open.html
@@ -16,8 +16,8 @@
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
-  <meta property="og:title" content="Stagedoor open in-app link service." />
-  <meta property="og:description" content="The must-have app for the London theatre lover." />
+  <meta property="og:title" content="Open with Stagedoor" />
+  <meta property="og:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives." />
   <meta property="og:url" content="http://stagedoorapp.com/open" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
@@ -27,8 +27,8 @@
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com/open" />
-  <meta name="twitter:title" content="Stagedoor open in-app link service." />
-  <meta name="twitter:description" content="The must-have app for the London theatre lover." />
+  <meta name="twitter:title" content="Open with Stagedoor" />
+  <meta name="twitter:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives.">
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 </head>
 <body>
