--- a/index.html
+++ b/index.html
@@ -23,17 +23,13 @@
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
 
-  <meta name="twitter:card" content="app">
-  <meta name="twitter:site" content="@stagedoorLDN">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@stagedoorLDN" />
+  <meta name="twitter:creator" content="@stagedoorLDN" />
+  <meta name="twitter:url" content="http://stagedoorapp.com" />
+  <meta name="twitter:title" content="London theatre app - Stagedoor" />
   <meta name="twitter:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives.">
-  <meta name="twitter:app:country" content="US">
-  <meta name="twitter:app:name:iphone" content="Stagedoor - London theatre app">
-  <meta name="twitter:app:id:iphone" content="963068912">
-  <meta name="twitter:app:url:iphone" content="stagedoor://">
-  <meta name="twitter:app:name:ipad" content="Stagedoor - London theatre app">
-  <meta name="twitter:app:id:ipad" content="963068912">
-  <meta name="twitter:app:url:ipad" content="stagedoor://">
-  <meta name="twitter:image" content="http://stagedoorapp.com/images/stagedoor-cover.png">
+  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 </head>
 <body>
   <!-- Google Tag Manager -->
