--- a/camdenfringe.html
+++ b/camdenfringe.html
@@ -100,7 +100,7 @@
           <p class="text--bigger">See which shows are playing around you, and plan your day.</p>
         </div>
         <div>
-          <h2>Stay-up-to-date</h2>
+          <h2>Stay up-to-date</h2>
           <p class="text--bigger">Follow your favourite theatre companies, venues and performers to stay up to date with future shows.</p>
         </div>
       </div>
