VAULT Festival addition

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <a href="http://stagedoorapp.com/partners" title="Become a partner">Claim your page</a>
       <a href="https://medium.com/@stagedoor" rel="nofollow" target="_blank" title="Blog">Blog</a>
       <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> app</span></a>
-      <a href="http://stagedoorapp.com/camdenfringe" title="Official app of The Camden Fringe" class="hide-on-mobile  camden-fringe-colour">#CamdenFringe</a>
+      <a href="http://stagedoorapp.com/vaultfestival" title="Official app of VAULT Festival" class="hide-on-mobile  vault-festival-colour">#VAULTFestival</a>
     </nav>
 
     <section class="padding--bottom-one-space  show-on-mobile  text--center">
@@ -76,7 +76,7 @@
         <p class="text--bigger  margin--top-two-spaces">
           <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  no-link-colour" title="Download now for iOS">Download on your iPhone</a>
         </p>
-        <small class="opacity--50  padding--top-half-space  center-on-mobile">Currently only for iOS. <a href="https://twitter.com/share?text=@stagedoorLDN: I would certainly enjoy the Android version of your mobile app!" target="_blank" rel="nofollow">Want it for Android?</a></small>
+        <small class="opacity--50  padding--top-half-space  center-on-mobile">Currently only for iPhones. <a href="https://twitter.com/share?text=@stagedoorLDN: I would certainly enjoy the Android version of your mobile app!" target="_blank" rel="nofollow">Want it for Android?</a></small>
 
         <p class="margin--top-two-spaces  opacity--50">
           <small class="text--section">Official partner with</small>
@@ -111,7 +111,7 @@
       <p class="text--bigger  margin--top-one-space">
         <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  horizontal--center no-link-colour" title="Download now for iOS">Download Stagedoor</a>
       </p>
-      <!--p class="text--bigger"><span class="text--yellow">NEW</span> - <a href="http://stagedoorapp.com/camdenfringe" class="camden-fringe-colour">Stagedoor is the official app<br/> of The Camden Fringe 2016 &rarr;</a></p-->
+      <p class="text--bigger  margin--top-two-spaces"><span class="text--yellow">NEW</span> - <a href="http://stagedoorapp.com/vaultfestival" class="vault-festival-colour">Stagedoor is the official app of VAULT Festival 2017 &rarr;</a></p>
     </section>
 
     <section class="margin--top-four-spaces  center-on-mobile">
@@ -126,11 +126,12 @@
         </div>
         <div>
           <h2>Powerful partnerships</h2>
-          <p class="text--bigger">We&rsquo;ve partnered with <a href="http://stagedoorapp.com/almeida">Almeida</a>, SoHo, The Old Vic, Barbican, Nimax Theatres, Delfont Mackintosh Theatres, and 25 other venues &amp; theatre companies to bring unique content into Stagedoor.</p>
+          <p class="text--bigger">We&rsquo;ve partnered with <a href="http://stagedoorapp.com/almeida">Almeida</a>, SoHo, The Old Vic, Barbican, Nimax Theatres, Delfont Mackintosh Theatres, and 30 other venues &amp; theatre companies to bring unique content into Stagedoor.</p>
         </div>
         <div>
-          <h2>#CamdenFringe 2016</h2>
-          <p class="text--bigger">Stagedoor became the official app of the biggest theatre festival in London, <a href="http://stagedoorapp.com/camdenfringe">The Camden Fringe</a>, listing over 900 performances and 250 theatre companies.</p>
+          <h2>Theatre festivals</h2>
+          <!-- <p class="text--bigger">Stagedoor became the official app of the biggest theatre festival in London, <a href="http://stagedoorapp.com/camdenfringe">The Camden Fringe</a>, listing over 900 performances and 250 theatre companies. In 2017 we secured another partnership with <a href="http://stagedoorapp.com/vaultfestival">VAULT Festival</a>.</p> -->
+          <p class="text--bigger">Stagedoor became the official app of the biggest theatre festivals in London, <a href="http://stagedoorapp.com/camdenfringe">The Camden Fringe 2016</a> and <a href="http://stagedoorapp.com/vaultfestival">VAULT Festival 2017</a>, listing over 1025 shows and 300 theatre companies.</p>
         </div>
       </div>
     </section>
