Google structured data

--- a/index.html
+++ b/index.html
@@ -30,6 +30,92 @@
   <meta name="twitter:title" content="London theatre app - Stagedoor" />
   <meta name="twitter:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives.">
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@graph":
+      [
+        {
+          "@type":"SiteNavigationElement",
+          "url": "https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8",
+          "name":"Download iPhone app"
+        },
+        {
+          "@type": "SiteNavigationElement",
+          "url": "http://stagedoorapp.com/vaultfestival",
+          "name":"VAULT Festival 2017 official mobile app"
+        },
+        {
+          "@type":"SiteNavigationElement",
+          "url": "http://stagedoorapp.com/partners",
+          "name":"Claim your Stagedoor profile"
+        },
+        {
+          "@type":"SiteNavigationElement",
+          "url": "https://medium.com/@stagedoor",
+          "name":"Stagedoor Blog"
+        },
+        {
+          "@type": "SiteNavigationElement",
+          "url": "http://stagedoorapp.com/camdenfringe",
+          "name":"The Camden Fringe Festival 2016 official mobile app"
+        },
+        {
+          "@type": "WebSite",
+          "name": "London theatre app – Stagedoor",
+          "alternateName": "Stagedoor: The must-have app for the London theatre lover.",
+          "url": "http://stagedoorapp.com",
+          "image": "http://stagedoorapp.com/images/stagedoor-cover.png",
+          "description": "The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives."
+        },
+        {
+          "@type": "Organization",
+          "url": "http://stagedoorapp.com",
+          "logo": "http://stagedoorapp.com/images/apple-touch-icon@2x.png",
+          "member":
+          [
+            {
+              "@type": "OrganizationRole",
+              "member": {
+                "@type": "Person",
+                "name": "Michael Hadjijoseph",
+                "sameAs": "https://twitter.com/mhadjijoseph",
+                "image": "https://scontent.fotp3-2.fna.fbcdn.net/v/t1.0-1/p160x160/10850100_10152937551022460_6588583299867517731_n.jpg?oh=63d1f3eb101fb1b5558c143e75021de0&oe=58F6F981"
+              },
+              "roleName": "CEO"
+            },
+            {
+              "@type": "OrganizationRole",
+              "member": {
+                "@type": "Person",
+                "name": "Alex Cican",
+                "sameAs": "https://twitter.com/alexcican",
+                "image": "https://pbs.twimg.com/profile_images/435724669497266176/agWg06ur_400x400.png"
+              },
+              "roleName": "CPO"
+            }
+          ],
+          "location": {
+            "@type": "Place",
+            "address": {
+              "@type": "PostalAddress",
+              "addressLocality": "London",
+              "addressRegion": "UK"
+            }
+          },
+          "image": "http://stagedoorapp.com/images/stagedoor-cover.png",
+          "description": "The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives.",
+          "sameAs": [
+            "http://www.facebook.com/stagedoorapp",
+            "http://twitter.com/stagedoorLDN",
+            "http://instagram.com/stagedoorLDN",
+            "https://www.linkedin.com/company/stagedoor",
+            "https://plus.google.com/+Stagedoorapp"
+          ]
+        }
+      ]
+    }
+  </script>
 </head>
 <body>
   <!-- Google Tag Manager -->
