--- a/vaultfestival.html
+++ b/vaultfestival.html
@@ -10,14 +10,14 @@
   <link rel="canonical" href="http://stagedoorapp.com/vaultfestival" />
 
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
-  <meta name="description" content="VAULT Festival partnered with Stagedoor to create their official mobile app. Book, heart, and share VAULT Festival shows." />
+  <meta name="description" content="VAULT Festival partnered with app to become their official mobile presence app 2017. Book, heart, and share VAULT Festival shows from Stagedoor app." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/vaultfestival-stagedoor.png" />
   <meta property="og:title" content="VAULT Festival 2017 official mobile app" />
-  <meta property="og:description" content="VAULT Festival partnered with Stagedoor to create their official mobile app. Book, heart, and share VAULT Festival shows." />
+  <meta property="og:description" content="VAULT Festival partnered with Stagedoor to become their official mobile app for 2017. Book, heart, and share VAULT Festival shows from Stagedoor app." />
   <meta property="og:url" content="http://stagedoorapp.com/vaultfestival" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
@@ -28,7 +28,7 @@
   <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com/vaultfestival" />
   <meta name="twitter:title" content="VAULT Festival 2017 official mobile app" />
-  <meta name="twitter:description" content="VAULT Festival partnered with Stagedoor to create their official mobile app. Book, heart, and share VAULT Festival shows." />
+  <meta name="twitter:description" content="VAULT Festival partnered with Stagedoor to become their official mobile app for 2017. Book, heart, and share VAULT Festival shows from Stagedoor app." />
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/vaultfestival-stagedoor.png" />
 </head>
 <body>
