--- a/croydonites.html
+++ b/croydonites.html
@@ -10,14 +10,14 @@
   <link rel="canonical" href="http://stagedoorapp.com/croydonites" />
 
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
-  <meta name="description" content="Croydonites Festival of New Theatre partnered with Stagedoor to create their official mobile app. Book, heart, and share Camden Fringe shows." />
+  <meta name="description" content="Croydonites Festival of New Theatre partnered with Stagedoor to create their official mobile app. Book, heart, and share Croydonites Festival of New Theatre." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/croydonites-stagedoor.png" />
   <meta property="og:title" content="Croydonites Festival of New Theatre 2017 official mobile app" />
-  <meta property="og:description" content="Croydonites Festival of New Theatre partnered with Stagedoor to create their official mobile app. Book, heart, and share Camden Fringe shows." />
+  <meta property="og:description" content="Croydonites Festival of New Theatre partnered with Stagedoor to create their official mobile app. Book, heart, and share Croydonites Festival of New Theatre." />
   <meta property="og:url" content="http://stagedoorapp.com/croydonites" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
@@ -28,7 +28,7 @@
   <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com/croydonites" />
   <meta name="twitter:title" content="Croydonites Festival of New Theatre 2017 official mobile app" />
-  <meta name="twitter:description" content="Croydonites Festival of New Theatre partnered with Stagedoor to create their official mobile app. Book, heart, and share Camden Fringe shows." />
+  <meta name="twitter:description" content="Croydonites Festival of New Theatre partnered with Stagedoor to create their official mobile app. Book, heart, and share Croydonites Festival of New Theatre." />
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/croydonites-stagedoor.png" />
 </head>
 <body>
@@ -56,7 +56,7 @@
     <section class="cf">
       <div class="float--right  width--40">
         <span class="iphone-screenshot  smaller-iphone-width-on-mobile">
-          <img src="images/theatre/iphone/croydonites.jpg" alt="camden fringe app stagedoor official" class="iphone-screenshot__inside" />
+          <img src="images/theatre/iphone/croydonites.jpg" alt="croydonites app stagedoor official" class="iphone-screenshot__inside" />
           <img src="images/iphone.png" alt="iphone placeholder" />
         </span>
       </div>
