header meta tag fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="http://stagedoorapp.com" />
   <meta name="google-site-verification" content="SAvFrim0Slkky87hhHSAoDlrkHf3nLyvrBy6SOrx9-o" />
 
-  <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
+   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="author" content="https://plus.google.com/+Stagedoorapp" />
   <meta name="description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
