--- a/partners.html
+++ b/partners.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
   <link rel="canonical" href="http://stagedoorapp.com/partners" />
 
-  <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
+   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="author" content="https://plus.google.com/+Stagedoorapp" />
   <meta name="description" content="Grow your following and get discovered through verified pages. Claim your professional Stagedoor page, and personalise the content seen by your followers." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
