--- a/targettheatrecompany.html
+++ b/targettheatrecompany.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
   <link rel="canonical" href="http://stagedoorapp.com/targettheatrecompany" />
 
-  <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
+   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="description" content="Stay up to date with current and upcoming shows by Target Theatre Company. Save and Recommend your favourite ones. Plug into theatre!" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
