--- a/camdenfringe.html
+++ b/camdenfringe.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
   <link rel="canonical" href="http://stagedoorapp.com/camdenfringe" />
 
-  <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
+   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="description" content="The Camden Fringe partnered with Stagedoor to create their official mobile app. Book, heart, and share Camden Fringe shows." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
