--- a/open.html
+++ b/open.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
   <link rel="canonical" href="http://stagedoorapp.com/open" />
 
-  <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
+   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="description" content="Please open this link on your iOS device (iPhone, iPad, iPod)." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- <meta name="apple-itunes-app" content="app-argument=stagedoor://venue/4"> -->
