changes to copy

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <p class="text--bigger  margin--top-one-space">
         <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" class="button  button--download  horizontal--center no-link-colour" title="Download now for iOS">Download Stagedoor</a>
       </p>
-      <p class="text--bigger  margin--top-two-spaces"><span class="text--yellow">NEW</span> - <a href="https://www.facebook.com/stagedoorapp/videos/1340822345965112/?hc_ref=NEWSFEED" class="vault-festival-colour">Stagedoor now has user reviews! Express your voice and join the community &rarr;</a></p>
+      <p class="text--bigger  margin--top-two-spaces"><span class="text--yellow">NEW</span> - <a href="https://www.facebook.com/stagedoorapp/videos/1340822345965112/?hc_ref=NEWSFEED">Add your review! Express your voice and join the community &rarr;</a></p>
     </section>
 
     <section class="margin--top-four-spaces  center-on-mobile">
