--- a/camdenfringe.html
+++ b/camdenfringe.html
@@ -2,7 +2,7 @@
 <html lang="en-gb">
 
 <head>
-  <title>The Camden Fringe 2016 official mobile app</title>
+  <title>The Camden Fringe 2017 official mobile app</title>
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
@@ -16,7 +16,7 @@
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/camdenfringe-stagedoor.png" />
-  <meta property="og:title" content="The Camden Fringe 2016 official mobile app" />
+  <meta property="og:title" content="The Camden Fringe 2017 official mobile app" />
   <meta property="og:description" content="The Camden Fringe partnered with Stagedoor to create their official mobile app. Book, heart, and share Camden Fringe shows." />
   <meta property="og:url" content="http://stagedoorapp.com/camdenfringe" />
   <meta property="og:site_name" content="Stagedoor" />
@@ -27,7 +27,7 @@
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com/camdenfringe" />
-  <meta name="twitter:title" content="The Camden Fringe 2016 official mobile app" />
+  <meta name="twitter:title" content="The Camden Fringe 2017 official mobile app" />
   <meta name="twitter:description" content="The Camden Fringe partnered with Stagedoor to create their official mobile app. Book, heart, and share Camden Fringe shows." />
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/camdenfringe-stagedoor.png" />
 </head>
@@ -80,10 +80,10 @@
         </header>
 
         <h1 class="padding--top-bottom-one-space">The must-have app for The Camden Fringe.</h1>
-        <h2>Stay up to date with what’s on, where it&lsquo;s on and who’s in it. &hearts; your favourite <a href="http://camdenfringe.com" class="no-link-colour  camden-fringe-colour">Camden Fringe 2016</a> shows. Free for all.</h2>
+        <h2>Stay up to date with what’s on, where it&lsquo;s on and who’s in it. &hearts; your favourite <a href="http://camdenfringe.com" class="no-link-colour  camden-fringe-colour">Camden Fringe 2017</a> shows. Free for all.</h2>
         <p class="text--bigger  margin--top-two-spaces">
           <a href="http://bit.ly/camfristgdr" class="appstore-link  button  button--download  camden-fringe-colour" title="Get Stagedoor for iOS">Download Stagedoor</a>
-          <small class="block  margin--top-half-space  text--grey  center-on-mobile">Currently only for iPhones.</small>
+          <small class="block  margin--top-half-space  text--grey  center-on-mobile">Currently only for iPhone.</small>
         </p>
       </div>
     </section>
@@ -110,7 +110,7 @@
       <h2>Discover The Camden Fringe with Stagedoor.</h2>
       <p class="text--bigger  margin--top-one-space">
         <a href="http://bit.ly/camfristgdr" class="appstore-link  button  button--download  camden-fringe-colour  horizontal--center" title="Download the app">Download Stagedoor</a>
-        <small class="block  margin--top-half-space  text--grey  center-on-mobile">Currently only for iPhones.</small>
+        <small class="block  margin--top-half-space  text--grey  center-on-mobile">Currently only for iPhone.</small>
       </p>
     </section>
 
