--- a/camdenfringe.html
+++ b/camdenfringe.html
@@ -80,7 +80,7 @@
         </header>
 
         <h1 class="padding--top-bottom-one-space">The must-have app for The Camden Fringe.</h1>
-        <h2>Stay up to date with what’s on, where it&lsquo;s on and who’s in it. &hearts; your favourite <a href="http://camdenfringe.com" class="no-link-colour  camden-fringe-colour">Camden Fringe 2017</a> shows. Free for all.</h2>
+        <h2>Stay up to date with what’s on, where it&lsquo;s on and who’s in it. &hearts; and review your favourite <a href="http://camdenfringe.com" class="no-link-colour  camden-fringe-colour">Camden Fringe 2017</a> shows. Free for all.</h2>
         <p class="text--bigger  margin--top-two-spaces">
           <a href="http://bit.ly/camfristgdr" class="appstore-link  button  button--download  camden-fringe-colour" title="Get Stagedoor for iOS">Download Stagedoor</a>
           <small class="block  margin--top-half-space  text--grey  center-on-mobile">Currently only for iPhone.</small>
@@ -93,7 +93,7 @@
       <div class="columns--3">
         <div>
           <h2>Discover the best shows</h2>
-          <p class="text--bigger">Find out which are the most popular shows from other attendees of The Camden Fringe.</p>
+          <p class="text--bigger">Find out which are the most popular shows from other attendees of The Camden Fringe 2017.</p>
         </div>
         <div>
           <h2>Maps</h2>
