--- a/camdenfringe.html
+++ b/camdenfringe.html
@@ -10,14 +10,14 @@
   <link rel="canonical" href="http://stagedoorapp.com/camdenfringe" />
 
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="description" content="The Camden Fringe partnered with Stagedoor to create their official mobile app. Book, heart, and share Camden Fringe shows." />
+  <meta name="description" content="The Camden Fringe partnered with Stagedoor for their official mobile app. Book, save, review, and share Camden Fringe shows." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/camdenfringe-stagedoor.png" />
   <meta property="og:title" content="The Camden Fringe 2017 official mobile app" />
-  <meta property="og:description" content="The Camden Fringe partnered with Stagedoor to create their official mobile app. Book, heart, and share Camden Fringe shows." />
+  <meta property="og:description" content="The Camden Fringe partnered with Stagedoor for their official mobile app. Book, save, review, and share Camden Fringe shows." />
   <meta property="og:url" content="http://stagedoorapp.com/camdenfringe" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
@@ -28,7 +28,7 @@
   <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com/camdenfringe" />
   <meta name="twitter:title" content="The Camden Fringe 2017 official mobile app" />
-  <meta name="twitter:description" content="The Camden Fringe partnered with Stagedoor to create their official mobile app. Book, heart, and share Camden Fringe shows." />
+  <meta name="twitter:description" content="The Camden Fringe partnered with Stagedoor for their official mobile app. Book, save, review, and share Camden Fringe shows." />
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/camdenfringe-stagedoor.png" />
 </head>
 <body>
