--- a/index.html
+++ b/index.html
@@ -216,8 +216,7 @@
         </div>
         <div>
           <h2>Theatre festivals</h2>
-          <!-- <p class="text--bigger">Stagedoor became the official app of the biggest theatre festival in London, <a href="http://stagedoorapp.com/camdenfringe">The Camden Fringe</a>, listing over 900 performances and 250 theatre companies. In 2017 we secured another partnership with <a href="http://stagedoorapp.com/vaultfestival">VAULT Festival</a>.</p> -->
-          <p class="text--bigger">Stagedoor became the official app of the biggest theatre festivals in London, <a href="http://stagedoorapp.com/camdenfringe">The Camden Fringe 2016</a> and <a href="http://stagedoorapp.com/vaultfestival">VAULT Festival 2017</a>, listing over 1025 shows and 300 theatre companies.</p>
+          <p class="text--bigger">Stagedoor is the official app of the biggest theatre festivals in London, <a href="http://stagedoorapp.com/camdenfringe">The Camden Fringe 2017</a> and 2016, <a href="http://stagedoorapp.com/vaultfestival">VAULT Festival 2017</a>, listing over 1425 shows and 300 theatre companies.</p>
         </div>
       </div>
     </section>
