--- a/camdenfringe.html
+++ b/camdenfringe.html
@@ -75,14 +75,14 @@
           <a href="http://bit.ly/camfristgdr" class="block--inline"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" width="80" class="appicon  vertical-align--neg-70" /></a>
           <h2 class="padding--left-one-space  block--inline  margin--top-half-space">
             Stagedoor<br/>
-            <small>Official app of <a href="http://camdenfringe.com" class="no-link-colour  camden-fringe-colour">The Camden Fringe</a>.</small>
+            <small>Official app of <a href="http://camdenfringe.com" class="no-link-colour">The Camden Fringe</a>.</small>
           </h2>
         </header>
 
         <h1 class="padding--top-bottom-one-space">The must-have app for The Camden Fringe.</h1>
-        <h2>Stay up to date with what’s on, where it&lsquo;s on and who’s in it. &hearts; and review your favourite <a href="http://camdenfringe.com" class="no-link-colour  camden-fringe-colour">Camden Fringe 2017</a> shows. Free for all.</h2>
+        <h2>Stay up to date with what’s on, where it&lsquo;s on and who’s in it. &hearts; and review your favourite <a href="http://camdenfringe.com" class="no-link-colour">Camden Fringe 2017</a> shows. Free for all.</h2>
         <p class="text--bigger  margin--top-two-spaces">
-          <a href="http://bit.ly/camfristgdr" class="appstore-link  button  button--download  camden-fringe-colour" title="Get Stagedoor for iOS">Download Stagedoor</a>
+          <a href="http://bit.ly/camfristgdr" class="appstore-link  button  button--download" title="Get Stagedoor for iOS">Download Stagedoor</a>
           <small class="block  margin--top-half-space  text--grey  center-on-mobile">Currently only for iPhone.</small>
         </p>
       </div>
@@ -109,7 +109,7 @@
     <section class="margin--top-bottom-four-spaces  horizontal--center  text--center">
       <h2>Discover The Camden Fringe with Stagedoor.</h2>
       <p class="text--bigger  margin--top-one-space">
-        <a href="http://bit.ly/camfristgdr" class="appstore-link  button  button--download  camden-fringe-colour  horizontal--center" title="Download the app">Download Stagedoor</a>
+        <a href="http://bit.ly/camfristgdr" class="appstore-link  button  button--download  horizontal--center" title="Download the app">Download Stagedoor</a>
         <small class="block  margin--top-half-space  text--grey  center-on-mobile">Currently only for iPhone.</small>
       </p>
     </section>
