--- a/invest.html
+++ b/invest.html
@@ -56,10 +56,10 @@
       </header>
 
       <div class="margin--top-four-spaces">
-        <h2 class="h2--giga">We are building a <em>new way</em> for theatre lovers to discover, book, and experience theatre. <br/>And <em>you</em> can be part of it!</h2>
-        <h2 class="padding--top-two-spaces">We believe that theatre <span class="text--emphasis">is for everyone</span> and that by making it more accessible, we can bring more people closer to it.</h2>
-        <h2 class="padding--top-two-spaces">With Stagedoor, we want to <span class="text--emphasis">level the playing field</span> between small and big budget productions and believe that by giving a voice to the community, theatre goers can discover the best shows for them.</h2>
-        <h2 class="padding--top-two-spaces">Pre-register for a chance to be selected to invest in Stagedoor.</h2>
+        <h2 class="h2--giga">We believe that theatre <em>is for everyone</em>, and by making it more accessible, we can bring more people close to it.</h2>
+        <h2 class="padding--top-two-spaces">Stagedoor essentially <span class="text--emphasis">levels the playing field</span> between small and big budget productions. By giving a voice to the community, we believe that theatre goers can discover the best shows for them.</h2>
+        <h2 class="padding--top-two-spaces">We are building a new way for theatre lovers to discover, book, and experience theatre. And <span class="text--emphasis">we want you</span> to be part of it.</h2>
+        <h2 class="padding--top-two-spaces">Pre-register your interest for a chance to invest in Stagedoor.</h2>
         <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" class="button  button--download  margin--top-two-spaces">Pre-register now</a></h2>
       </div>
     </section>
@@ -68,25 +68,34 @@
     <section class="has-bg-image--gradient  text">
       <div class="padding--top-bottom-six-spaces  max-width--980  horizontal--center">
         <header class="header--green">
-          Meet the app
+          Meet Stagedoor
         </header>
 
         <div class="max-width--600">
           <div class="margin--top-four-spaces">
+            <h2 class="h2--giga">IMDB for theatre</h2>
+            <h2>Stagedoor is the most comprehensive database of shows in London.</h2>
+          </div>
+
+          <div class="margin--top-four-spaces">
             <h2 class="h2--giga">Stay up to date</h2>
-            <h2>Follow directors, writers, cast, and venues, so you know what’s on.</h2>
+            <h2>Follow directors, writers, actors, and venues, so you know what’s on. Stay informed about upcoming shows.</h2>
           </div>
           <div class="margin--top-four-spaces">
-            <h2 class="h2--giga">Never miss out</h2>
-            <h2>Save amazing shows. Get notified before they close. Book shows seamlessly.</h2>
+            <h2 class="h2--giga">Smart wishlist</h2>
+            <h2>Discover amazing shows. Get notified before they close.</h2>
           </div>
           <div class="margin--top-four-spaces">
-            <h2 class="h2--giga">Voice your opinion</h2>
-            <h2>Review shows you’ve seen and be part of the theatre community.</h2>
+            <h2 class="h2--giga">Instant book</h2>
+            <h2>Seamlessly book tickets to shows. Say goodbye to entering CC details every time you book at a new venue.</h2>
+          </div>
+          <div class="margin--top-four-spaces">
+            <h2 class="h2--giga">Your personal theatre journal</h2>
+            <h2>Keep track of all the shows you’ve seen. Be part of the most vibrant theatre community.</h2>
           </div>
         </div>
 
-        <div class="invest-app-screenshot"  data--100-bottom-top="top:5%;opacity:0;" data--500-bottom-top="top:-5%;opacity:1" data-top="top:-40%"  data--700-top="top:-80%">
+        <div class="invest-app-screenshot"  data--100-bottom-top="top:10%;opacity:0;" data--500-bottom-top="top:-1%;opacity:1" data-top="top:-20%"  data--700-top="top:-29%">
           <img src="images/discover.jpg" alt="discover screenshot" />
         </div>
       </div>
@@ -98,32 +107,33 @@
         Milestones
       </header>
 
-      <div class="columns--4  margin--top-four-spaces">
+      <div class="columns--3  margin--top-four-spaces">
         <div>
-          <h2 class="h2--giga">15,000+</h2>
-          <h2>app downloads</h2>
+          <h2 class="h2--giga">£250,000</h2>
+          <h2>Raised from investors so far (Jan 2016).</h2>
         </div>
         <div>
-          <h2 class="h2--giga">230</h2>
-          <h2>venues signed up</h2>
+          <h2 class="h2--giga">€135,000</h2>
+          <h2>Innovation Grant received from EU.</h2>
         </div>
         <div>
-          <h2 class="h2--giga">300+</h2>
-          <h2>theatre companies</h2>
-        </div>
-        <div>
-          <h2 class="h2--giga">5,000+</h2>
-          <h2>reviews posted</h2>
+          <h2 class="h2--giga">16,000+</h2>
+          <h2>app downloads.</h2>
         </div>
       </div>
 
-      <div class="columns--2  margin--top-one-space">
+      <div class="columns--3  margin--top-one-space">
         <div>
-          <h1 class="h1--giga">&#63743;</h1>
-          <h2>Featured app by Apple.</h2>
+          <h2 class="h2--giga">Loved by &#63743;</h2>
+          <h2>Featured as “Best new app” on App Store UK.</h2>
         </div>
-        <div class="margin--top-two-spaces">
-          <h2>Official app of biggest theatre festivals in London: Camden Fringe 2016 & 2017 and VAULT Festival 2017, listing over 1,500 shows.</h2>
+        <div>
+          <h2 class="h2--giga">6,000+ user reviews.</h2>
+          <h2>Posted by our passionate theatre community.</h2>
+        </div>
+        <div>
+          <h2 class="h2--giga">Strong partnerships.</h2>
+          <p>Official app for London’s biggest festivals (The Camden Fringe, VAULT Festival). Over 200 Venues &amp; 400 theatre companies onboarded on the app.</p>
         </div>
       </div>
     </section>
@@ -138,15 +148,18 @@
         <div class="columns--3  margin--top-four-spaces">
           <div>
             <p><img src="/images/booking.svg" alt="booking icon" /></p>
-            <h2 class="h2--giga">Seamless ticket booking.</h2>
+            <h2 class="h2--giga">Seamless ticket booking</h2>
+            <h2>15% commission on sales.</h2>
           </div>
           <div>
             <p><img src="/images/circle.svg" alt="circle icon" /></p>
-            <h2 class="h2--giga">Stagedoor Circle Membership.</h2>
+            <h2 class="h2--giga">Stagedoor Circle Membership</h2>
+            <h2>Subscription fee.</h2>
           </div>
           <div>
             <p><img src="/images/promote.svg" alt="promote icon" /></p>
-            <h2 class="h2--giga">Help producers &amp; marketers promote shows.</h2>
+            <h2 class="h2--giga">Advertising platform</h2>
+            <h2>Helping venues reach the right audience for their shows.</h2>
           </div>
         </div>
       </div>
@@ -156,7 +169,7 @@
     <section class="has-bg-image--nyc  text">
       <div class="max-width--980  horizontal--center  padding--top-bottom-six-spaces">
       <header class="header--purple">
-        Growth plan
+        Expansion plan
       </header>
 
       <div class="columns--2  margin--top-four-spaces">
@@ -164,7 +177,7 @@
           <h2 class="h2--giga">Reach 100K users in London, UK.</h2>
         </div>
         <div>
-          <h2 class="h2--giga">Going global. Expand in NYC and Europe.</h2>
+          <h2 class="h2--giga">Go global. Expand in NYC and Europe.</h2>
         </div>
       </div>
       </div>
@@ -172,11 +185,15 @@
 
 
     <section class="text  margin--top-eight-spaces  max-width--980  horizontal--center">
-      <h2 class="h2--giga">Backed by strategic investors</h2>
-      <h2>Stagedoor has received over $83 million of investment from some of Europe’s most well-known investors. They’ve invested in household names like Facebook, Dropbox and Skype!</h2>
+      <h2 class="h2--giga">Backed by strategic investors.</h2>
+      <h2 class="padding--top-two-spaces">Our early stage investors and Board members include tech entrepreneurs and theatre professionals Stagedoor has raised £250,000 in 2016 and has also received a €135,000 innovation grant from the EU.</h2>
+      <h2 class="padding--top-two-spaces">The company is now raising £300,000 from Angel investors &amp; strategic industry partners to grow to 100,000 users in London, execute on our monetisation strategy as well as to prepare for geographical expansion.</h2>
+      <h2 class="padding--top-two-spaces">We wanted to extend this funding round by opening it up to our community and theatre lovers around the globe.</h2>
+      <h2 class="padding--top-two-spaces  h2--giga">If you’d like to own a piece of Stagedoor and be part of the journey pre-register your interest below.</h2>
+      <h2>The first 200 people who pre-register will be selected to invest in Stagedoor.</h2>
       <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" class="button  button--download  margin--top-two-spaces">Pre-register now</a></h2>
     </section>
-    <section class="padding--top-six-spaces  max-width--980  horizontal--center  text--light-grey">
+    <section class="margin--top-four-spaces  max-width--980  horizontal--center  text--light-grey">
       Investing involves risks, including loss of capital, illiquidity, lack of dividends and dilution, and it should be done only as part of a diversified portfolio. This webpage has been approved as a financial promotion by Seedrs Limited which is authorised and regulated by the Financial Conduct Authority.
     </section>
   </div>
@@ -238,14 +255,18 @@
 
     // hide or show "scroll down" text
     function fadeScrollText() {
-      var scrollTop = $window.scrollTop();
+      var windowHeight = $window.height();
       scrollText.fadeOut('slow');
-      if (scrollTop < 10)
-        setTimeout(function() {
-          scrollText.fadeIn('slow');
-        }, 2500);
-      if (scrollTop > 100)
-        scrollText.fadeOut('slow');
+
+      if (windowHeight > 700) {
+        var scrollTop = $window.scrollTop();
+        if (scrollTop < 10)
+          setTimeout(function() {
+            scrollText.fadeIn('slow');
+          }, 2500);
+        if (scrollTop > 100)
+          scrollText.fadeOut('slow');
+      }
     }
     $window.on('scroll', function(){
       fadeScrollText();
