--- a/invest.html
+++ b/invest.html
@@ -193,7 +193,7 @@
       <h2>The first 200 people who pre-register will be selected to invest in Stagedoor.</h2>
       <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" class="button  button--download  margin--top-two-spaces">Pre-register now</a></h2>
     </section>
-    <section class="margin--top-four-spaces  max-width--980  horizontal--center  text--light-grey">
+    <section class="margin--top-six-spaces  max-width--980  horizontal--center  text--light-grey">
       Investing involves risks, including loss of capital, illiquidity, lack of dividends and dilution, and it should be done only as part of a diversified portfolio. This webpage has been approved as a financial promotion by Seedrs Limited which is authorised and regulated by the Financial Conduct Authority.
     </section>
   </div>
@@ -208,8 +208,6 @@
     <div>
       Stagedoor is a <strong>London theatre app</strong>.
     </div>
-
-    <br/><a href="https://mixpanel.com/f/partner" target="_blank" rel="nofollow"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_light.png" alt="Mobile Analytics" /></a>
   </footer>
 
 
