meta tags changes

--- a/invest.html
+++ b/invest.html
@@ -7,17 +7,17 @@
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
-  <link rel="canonical" href="http://stagedoorapp.com/camdenfringe" />
+  <link rel="canonical" href="http://stagedoorapp.com/invest" />
   <meta name="robots" value="noindex,nofollow" />
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="description" content="The Camden Fringe partnered with Stagedoor for their official mobile app. Book, save, review, and share Camden Fringe shows." />
+  <meta name="description" content="Invest in Stagedoor. Own a part of the most exciting theatre tech company in the world." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="og:image" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
-  <meta property="og:title" content="London theatre app - Stagedoor" />
-  <meta property="og:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives." />
+  <meta property="og:title" content="Invest in Stagedoor" />
+  <meta property="og:description" content="Own a part of the most exciting theatre tech company in the world." />
   <meta property="og:url" content="http://stagedoorapp.com" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
@@ -26,8 +26,8 @@
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com" />
-  <meta name="twitter:title" content="London theatre app - Stagedoor" />
-  <meta name="twitter:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives.">
+  <meta name="twitter:title" content="Invest in Stagedoor" />
+  <meta name="twitter:description" content="Own a part of the most exciting theatre tech company in the world.">
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
 </head>
 <body>
