meta tag FB fix

--- a/invest.html
+++ b/invest.html
@@ -15,17 +15,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
+  <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
   <meta property="og:title" content="Invest in Stagedoor" />
   <meta property="og:description" content="Own a part of the most exciting theatre tech company in the world." />
-  <meta property="og:url" content="http://stagedoorapp.com" />
+  <meta property="og:url" content="http://stagedoorapp.com/invest" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
-  <meta name="twitter:url" content="http://stagedoorapp.com" />
+  <meta name="twitter:url" content="http://stagedoorapp.com/invest" />
   <meta name="twitter:title" content="Invest in Stagedoor" />
   <meta name="twitter:description" content="Own a part of the most exciting theatre tech company in the world.">
   <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
