--- a/invest.html
+++ b/invest.html
@@ -92,13 +92,11 @@
           </div>
           <div class="margin--top-four-spaces">
             <h2 class="h2--giga">Your personal theatre journal</h2>
-            <h2>Keep track of all the shows you’ve seen. Be part of the most vibrant theatre community.</h2>
+            <h2>Keep track of all the shows you’ve seen. Share your reviews and be part of the most vibrant theatre community.</h2>
           </div>
         </div>
 
-        <div class="invest-app-screenshot"  data--100-bottom-top="top:10%;opacity:0;" data--500-bottom-top="top:-1%;opacity:1" data-top="top:-20%"  data--700-top="top:-29%">
-          <img src="images/discover.jpg" alt="discover screenshot" />
-        </div>
+        <div class="invest-app-screenshot"  data--100-bottom-top="top:10%;opacity:0;" data--500-bottom-top="top:-1%;opacity:1" data-top="top:-20%"  data--700-top="top:-29%"></div>
       </div>
     </section>
 
@@ -110,31 +108,37 @@
 
       <div class="columns--3  margin--top-four-spaces">
         <div>
-          <h2 class="h2--giga">£250,000</h2>
-          <h2>Raised from investors so far (Jan 2016).</h2>
+          <span class="date">Jan 2016</span>
+          <h2>£250,000</h2>
+          <p class="text--bigger">Raised from Angel investors.</h2>
         </div>
         <div>
-          <h2 class="h2--giga">€135,000</h2>
-          <h2>Innovation Grant received from EU.</h2>
+          <span class="date">2016 - 2017</span>
+          <h2>Built an engaging product</h2>
+          <p class="text--bigger">26,000+ saved shows. 6,000 show reviews posted by users. 16,000+ downloads.</p>
         </div>
         <div>
-          <h2 class="h2--giga">16,000+</h2>
-          <h2>app downloads.</h2>
+          <span class="date">Aug 2016</span>
+          <h2>Loved by &#63743;</h2>
+          <p class="text--bigger">Featured as “Best new app” on App Store UK.</p>
         </div>
       </div>
 
       <div class="columns--3  margin--top-one-space">
         <div>
-          <h2 class="h2--giga">Loved by &#63743;</h2>
-          <h2>Featured as “Best new app” on App Store UK.</h2>
+          <span class="date">Dec 2016</span>
+          <h2>Venue partnerships</h2>
+          <p class="text--bigger">Onboarded 80% of London’s venues including The National, Young Vic, Nimax Theatres, Soho Theatre, The Barbican, and more.</p>
         </div>
         <div>
-          <h2 class="h2--giga">6,000+ user reviews.</h2>
-          <h2>Posted by our passionate theatre community.</h2>
+          <span class="date">2016 - 2017</span>
+          <h2>Official festival app</h2>
+          <p class="text--bigger">For London’s biggest theatre festivals (VAULT festival &amp; The Camden Fringe). Onboarded 800+ theatre companies.</p>
         </div>
         <div>
-          <h2 class="h2--giga">Strong partnerships.</h2>
-          <p>Official app for London’s biggest festivals (The Camden Fringe, VAULT Festival). Over 200 Venues &amp; 400 theatre companies onboarded on the app.</p>
+          <span class="date">Mar 2017</span>
+          <h2>Innovation grant</h2>
+          <p class="text--bigger">Granted by the EU in March 2017 for €135,000.</p>
         </div>
       </div>
     </section>
@@ -148,19 +152,19 @@
 
         <div class="columns--3  margin--top-four-spaces">
           <div>
-            <p><img src="/images/booking.svg" alt="booking icon" /></p>
-            <h2 class="h2--giga">Seamless ticket booking</h2>
-            <h2>15% commission on sales.</h2>
+            <p><img src="/images/booking.svg" alt="booking icon" class="svg" /></p>
+            <h2>Seamless ticket booking</h2>
+            <p class="text--bigger">15% commission on sales.</p>
           </div>
           <div>
-            <p><img src="/images/circle.svg" alt="circle icon" /></p>
-            <h2 class="h2--giga">Stagedoor Circle Membership</h2>
-            <h2>Subscription fee.</h2>
+            <p><img src="/images/circle.svg" alt="circle icon" class="svg" /></p>
+            <h2>Stagedoor premium</h2>
+            <p class="text--bigger">Subscription based membership giving access to free/discounted shows and unique experiences.</p>
           </div>
           <div>
-            <p><img src="/images/promote.svg" alt="promote icon" /></p>
-            <h2 class="h2--giga">Advertising platform</h2>
-            <h2>Helping venues reach the right audience for their shows.</h2>
+            <p><img src="/images/promote.svg" alt="promote icon" class="svg" /></p>
+            <h2>Data driven advertising platform</h2>
+            <p class="text--bigger">Helping venues reach the right audience for their shows.</p>
           </div>
         </div>
       </div>
@@ -185,29 +189,28 @@
     </section>
 
 
-    <section class="text  margin--top-eight-spaces  max-width--980  horizontal--center">
-      <h2 class="h2--giga">Backed by strategic investors.</h2>
-      <h2 class="padding--top-two-spaces">Our early stage investors and Board members include tech entrepreneurs and theatre professionals Stagedoor has raised £250,000 in 2016 and has also received a €135,000 innovation grant from the EU.</h2>
-      <h2 class="padding--top-two-spaces">The company is now raising £300,000 from Angel investors &amp; strategic industry partners to grow to 100,000 users in London, execute on our monetisation strategy as well as to prepare for geographical expansion.</h2>
-      <h2 class="padding--top-two-spaces">We wanted to extend this funding round by opening it up to our community and theatre lovers around the globe.</h2>
-      <h2 class="padding--top-two-spaces  h2--giga">If you’d like to own a piece of Stagedoor and be part of the journey pre-register your interest below.</h2>
-      <h2>The first 200 people who pre-register will be selected to invest in Stagedoor.</h2>
+    <section class="text  padding--top-bottom-six-spaces  max-width--980  horizontal--center">
+      <h2 class="h2--giga">Owning a part of Stagedoor.</h2>
+      <h2 class="padding--top-two-spaces">For our second funding round we are raising £300,000 from Angel investors and strategic theatre industry partners. Our goal is to grow our user base to 100,000 in London, execute on our monetisation strategy, and prepare for geographical expansion in NYC. Stagedoor has also been approved for an EU Innovation grant of €135,000.</h2>
+      <h2 class="padding--top-two-spaces">Our early stage investors and board members include tech entrepreneurs and theatre professionals. Being a very community-focused product, we wanted to open-up this funding round to our community and theatre lovers around the globe.</h2>
+      <h2 class="padding--top-two-spaces  h2--giga">If you’d like to own a piece of Stagedoor and be part of the journey, pre-register your interest below.</h2>
+      <p class="text--bigger">* Investors will be selected on a first-come, first-served basis.</p>
       <h2><a href="https://stagedoor1.typeform.com/to/hSAEsj" class="button  button--download  margin--top-two-spaces">Pre-register now</a></h2>
     </section>
-    <section class="margin--top-six-spaces  max-width--980  horizontal--center  text--light-grey">
+    <section class="max-width--980  horizontal--center  text--light-grey">
       Investing involves risks, including loss of capital, illiquidity, lack of dividends and dilution, and it should be done only as part of a diversified portfolio. This webpage has been approved as a financial promotion by Seedrs Limited which is authorised and regulated by the Financial Conduct Authority.
     </section>
   </div>
 
-  <footer class="opacity--50  max-width--980  margin--top-ten-spaces  horizontal--center">
+  <footer class="opacity--50  max-width--980  margin--top-six-spaces  padding--bottom-one-space  horizontal--center">
     <span class="follow-link-footer">
       <a href="https://twitter.com/stagedoorLDN" target="_blank" rel="nofollow"><img src="images/twitter.svg" alt="twitter logo" class="twitter-icon" />@stagedoorLDN</a>
-      <span class="hide-on-mobile">&nbsp; &middot; &nbsp;</span>
+      <span>&nbsp; &middot; &nbsp;</span>
       <a href="https://fb.com/stagedoorapp" target="_blank" rel="nofollow"><img src="images/facebook.svg" alt="facebook logo" class="facebook-icon" />StagedoorApp</a>
     </span>
 
     <div>
-      Stagedoor is a <strong>London theatre app</strong>.
+      <a href="https://stageodorapp.com" title="London Theatre app for iOS" class="no-link-colour">Stagedoor</a> is a <strong>London theatre app</strong>.
     </div>
   </footer>
 
@@ -217,6 +220,11 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="/scripts/partials/skrollr.min.js"></script>
   <script>
+    if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent) ) {
+    } else {
+      $('.invest-app-screenshot').append('<img src="images/discover.jpg" alt="discover screenshot" />');
+    }
+
     var $window = $(window);
     var scrollText = $('.scroll-text');
 
